nullaway_error_0c913672-f3e9-4dc3-9991-f5074402295c.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/Spritesheet.java:105: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.image;
    ^
    (see http://t.uber.com/nullaway )
